log
Thu 16 May 2024 05:38:29 PM UTC: 
 tests:  0|5
total_score: 0/70
611b619
Thu 16 May 2024 06:27:22 PM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a081211
Thu 16 May 2024 06:34:39 PM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6ba6dc6
Thu 16 May 2024 06:37:35 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
476bcfa
Thu 16 May 2024 07:01:11 PM UTC: 
 sudoku.c | 39 +++++++++++++--------------------------
 1 file changed, 13 insertions(+), 26 deletions(-)
 tests:  5|3
total_score: 35/70
7462da3
Thu 16 May 2024 07:03:46 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
46628e5
Thu 16 May 2024 07:05:18 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
f34bfad
Thu 16 May 2024 07:08:15 PM UTC: 
 sudoku.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
 tests:  3|4
total_score: 20/70
637b9ce
Thu 16 May 2024 07:08:36 PM UTC: 
 sudoku.c | 32 +++++++++++++++-----------------
 1 file changed, 15 insertions(+), 17 deletions(-)
 tests:  6|2
total_score: 45/70
7c4466c
Thu 16 May 2024 07:10:10 PM UTC: 
 sudoku.c | 23 +++++++++++++++--------
 1 file changed, 15 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
bc4cd53
Sat 18 May 2024 01:54:08 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
65aa08c
Sat 18 May 2024 01:57:28 AM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
01de81f
Sat 18 May 2024 01:59:44 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
091757b
Sat 18 May 2024 02:03:37 AM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
69104c9
Sat 18 May 2024 02:04:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
0286314
Sat 18 May 2024 02:04:49 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 55/70
cf05496
Sat 18 May 2024 02:17:08 AM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  0|0
bc18528
Sat 18 May 2024 02:23:06 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:132:13: error: unused variable ‘adjNodes’ [-Werror=unused-variable]
  132 |       List *adjNodes = get_adj_nodes(current);
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
70ebf03
Sat 18 May 2024 02:25:08 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
3ba3ee7
Sat 18 May 2024 02:25:44 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
72b36c4
Sat 18 May 2024 02:26:53 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
6451e54
Sat 18 May 2024 02:28:51 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6c79341
Sat 18 May 2024 02:28:57 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
590ee6f
Sat 18 May 2024 02:39:14 AM UTC: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  8|1
total_score: 60/70
5681ba5
Sat 18 May 2024 10:41:21 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
c5ad5f4
Sat 18 May 2024 10:46:50 PM UTC: 
 sudoku.c | 17 +++++------------
 1 file changed, 5 insertions(+), 12 deletions(-)
 tests:  7|1
total_score: 55/70
6c0d2ae
Sat 18 May 2024 10:47:51 PM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:14: error: expected ‘;’ before ‘}’ token
  133 |       free(s)
      |              ^
      |              ;
  134 |    }
      |    ~          
Compilation failed
73e4de0
Sat 18 May 2024 10:47:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
630d166
Sat 18 May 2024 10:48:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ed3c218
Sat 18 May 2024 10:50:30 PM UTC: 
 sudoku.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  8|1
total_score: 60/70
b7f078b
Sat 18 May 2024 10:54:24 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
91b923f
Sat 18 May 2024 11:04:40 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
39564ca
Sat 18 May 2024 11:05:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|1
total_score: 60/70
8561a72
